Refactor logging and remove redundant code
Removed unnecessary log statements and commented code to improve readability and maintainability. Adjusted method usages for consistency and clarity in EclipseProjectAdapter and EclipseResourceAdapter classes.